--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
-
+:root {
+    --branco-principal: #FFFFFF;
+    --cinza-secundario: #c0c0c0;
+    --botao-azul: #167BF7;
+    --cor-de-fundo: #00030C;
+}
