--- a/style.css
+++ b/style.css
@@ -8,3 +8,20 @@
 body {
     background-color: var(--cor-de-fundo);
 }
+
+.principal {
+    background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.container {
+    height: 100vh;
+}
+
+.container_botao {
+    background: var(--botao-azul);
+    border-radius: 16px;
+    padding: 1em;
+    color: var(--branco-principal);
+}
