--- a/style.css
+++ b/style.css
@@ -17,11 +17,16 @@ body {
 
 .container {
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
-.container_botao {
+.container__botao {
     background: var(--botao-azul);
     border-radius: 16px;
     padding: 1em;
     color: var(--branco-principal);
+    display: block;
 }
+
+.botao_secundario
