--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
 }
 
 .principal {
@@ -18,7 +19,7 @@ body {
 .container {
     height: 100vh;
     display: grid;
-    grid-template-columns: 30% 30%;
+    grid-template-columns: 50% 50%;
 }
 
 .container__botao {
@@ -29,4 +30,6 @@ body {
     display: block;
 }
 
-.botao_secundario
+.botao_secundario {
+    background-color: ;
+}
