--- a/style.css
+++ b/style.css
@@ -41,3 +41,8 @@ body {
     border: 2px solid var(--branco-principal);
     border-radius: 16px;
 }
+
+.container__aviso {
+    font-size: ;
+    color: ;
+}
