--- a/style.css
+++ b/style.css
@@ -81,4 +81,21 @@ margin: 1em 0 2em 0;
 
 .descricao__texto {
     color: var(--cinza-secundario);
+
+}
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao {
+    padding: 2em;
+}
+
+.dispositivos__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em;
 }
