--- a/style.css
+++ b/style.css
@@ -99,3 +99,14 @@ margin: 1em 0 2em 0;
     list-style-type: none;
     margin: 5em;
 }
+
+.rodape__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin-top:1em;
+}
+
+.lista__link {
+    
+}
