--- a/style.css
+++ b/style.css
@@ -100,6 +100,11 @@ margin: 1em 0 2em 0;
     margin: 5em;
 }
 
+.rodape {
+    text-align: center;
+    margin: 5em 3em;
+}
+
 .rodape__lista {
     display: flex;
     justify-content: center;
